* Added --add-exports options to ganttproject.command and ganttproject.l4j.ini, and to the gradle's run and runapp tasks. * removed a few obsolete elements from gradle files, moved kotlin plugin to the root project as Gradle suggests