@@ -1,9 +1,6 @@
-// This installs dependencyUpdates plugin
-// Run gradle dependencyUpdates to get the report
-
-// Path to launch4j binary
-ext.launch4j = '/opt/launch4j/launch4j'
-// Directories where we build the distro
+plugins {
+    id "org.jetbrains.kotlin.jvm" version "1.6.0" apply false
+}
 ext.semver = '3.2'
 ext.buildNum = '3200'
 ext.distBinDir = file('ganttproject-builder/dist-bin')
@@ -20,12 +17,29 @@ allprojects {
     }
     repositories {
         mavenCentral()
+        google()
         jcenter()
     }
     apply plugin: 'java'
     ext {
         libDir = 'lib'
         mvnDir = 'lib/mvn'
+        kotlin_version = "1.6.0"
+        javaExportOptions = [
+            '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+            '--add-exports', 'javafx.base/com.sun.javafx=ALL-UNNAMED',
+            '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+            '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED',
+            '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.skin.resources=ALL-UNNAMED',
+            '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED',
+            '--add-exports', 'javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED',
+            '--add-exports', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+            '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
+            '--add-exports', 'javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
+            '--add-opens', 'java.desktop/sun.swing=ALL-UNNAMED',
+            '--add-opens', 'java.desktop/sun.awt.X11=ALL-UNNAMED'
+        ]
+
     }
     sourceCompatibility = 11
     targetCompatibility = 11
